increase nav-mobile-breakpoint to fix wrapping issue

--- a/src/platform/mhv/secondary-nav/sass/mhv-sec-nav.scss
+++ b/src/platform/mhv/secondary-nav/sass/mhv-sec-nav.scss
@@ -1,7 +1,7 @@
 @import "~@department-of-veterans-affairs/formation/sass/shared-variables";
 
 $nav-width-bar-max-width: 720px;
-$nav-mobile-breakpoint: 650px;
+$nav-mobile-breakpoint: 668px;
 
 .mhv-c-sec-nav-bar-row {
   justify-content: space-around;
